# EIF201-Programaci-n-I-IC2026

./: README.md
listas y nodos/Listas/: Estudiante.cpp  Estudiante.h  Listas.sln  Listas.vcxproj  Listas.vcxproj.filters  Students.h  listaEstudiante.cpp  listaEstudiante.h  main.cpp
practicas de examen/practica quiz 15042026/: Vuelo.cpp  Vuelo.h  main.cpp  practica quiz 15042026.sln  practica quiz 15042026.vcxproj  practica quiz 15042026.vcxproj.filters
sesion02/Clase Git/: Clase Git.sln  Clase Git.vcxproj  Clase Git.vcxproj.filters  Parametros.cpp  Parametros.h  main.cpp
sesion02/Ejercicio2/: Ejercicio2.sln  Ejercicio2.vcxproj  Ejercicio2.vcxproj.filters  Invertido.cpp  Invertido.h  main.cpp
sesion02/Ejercicio3/: Ejercicio3.sln  Ejercicio3.vcxproj  Ejercicio3.vcxproj.filters  Matriz.cpp  Matriz.h  main.cpp
sesion02/Ejercicio4/: Ejercicio4.sln  Ejercicio4.vcxproj  Ejercicio4.vcxproj.filters  Nombre.cpp  Nombre.h  main.cpp
sesion03/Lab2_S03_[AshlyHidalgo]/: Lab2_S03_[AshlyHidalgo].sln  Lab2_S03_[AshlyHidalgo].vcxproj  main.cpp  temperatura.cpp  temperatura.h
sesion03/Mensajeria/: Mensajeria.sln  Mensajeria.vcxproj  Mensajeria.vcxproj.filters  Paqueteria.cpp  Paqueteria.h  (+1 more)
sesion07/PruebaQt/: BrandMedication.cpp  BrandMedication.h  CMakeLists.txt  Client.cpp  Client.h  ControlledMedication.cpp  ControlledMedication.h  GenericMedicine.cpp  GenericMedicine.h  Medicine.cpp  Medicine.h  PharmacySystem.cpp  PharmacySystem.h  PruebaQt.sln  PruebaQt.vcxproj  PruebaQt.vcxproj.filters  Sale.cpp  Sale.h  mainWindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
(+71 files in other folders)
